# ParticleGenerator

./: .gitignore  CMakeLists.txt  Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h  README.md  main.cpp
Emitters/: Emitter.cpp  Emitter.h  FountainEmitter.cpp  FountainEmitter.h
Physics/: LorenzAttractor.cpp  LorenzAttractor.h  Newtonian.cpp  Newtonian.h  Physics.h
